Fix: align items in Header

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -23,6 +23,8 @@
   color: #000000;
   gap: 16px;
   cursor: pointer;
+  align-content: center;
+  align-self: center;
 }
 
 @media screen and (max-width: 768px) {
